--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -45,11 +45,20 @@ body:
       required: true
 
   - type: input
+    id: pkg
+    attributes:
+      label: Which package are you using?
+      description: If this problem occurs in more than one package, write them separated with a comma.
+      placeholder: core,commons
+    validations:
+      required: true
+
+  - type: input
     id: versions
     attributes:
-      label: Which version of the app are you using?
-      description: If this problem occurs in more than one version of the application, write them separated with a comma.
-      placeholder: v1.0.0,v1.1.0
+      label: Which version of the package are you using?
+      description: If this problem occurs in more than one version of the package, write them separated with a comma.
+      placeholder: 1.0.0,1.1.0
     validations:
       required: true
 
@@ -64,7 +73,7 @@ body:
   - type: checkboxes
     attributes:
       label: Code of Conduct
-      description: Read the [Code of Conduct](https://github.com/tresdoce/tresdoce-nestjs-toolkit-test/blob/master/.github/CODE_OF_CONDUCT.md) first.
+      description: Read the [Code of Conduct](https://github.com/tresdoce/tresdoce-nestjs-toolkit/blob/master/.github/CODE_OF_CONDUCT.md) first.
       options:
         - label: I agree to follow the Code of Conduct
           required: true
