chore: edit turbo

--- a/turbo.json
+++ b/turbo.json
@@ -12,6 +12,9 @@
     "lint": {
       "outputs": []
     },
+    "format": {
+      "outputs": []
+    },
     "dev": {
       "cache": false
     }
