--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,8 +50,8 @@ jobs:
       - name: "📦 Install Dependencies"
         run: yarn install
 
-      - name: "🔦 Lint & Format"
-        run: yarn lint && yarn format
+      - name: "🔦 Lint"
+        run: yarn lint
 
       - name: "🔨 Build"
         run: yarn build && node sonar-args.js
