--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "turbo run test",
     "lint": "lint-staged",
     "prepublishOnly": "yarn build",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,md}\"",
+    "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md}\"",
     "version-packages": "lerna version --conventional-commits --force-git-tag --create-release github --yes",
     "publish:pkgs": "lerna publish from-git --no-verify-access --yes",
     "postinstall": "husky install && lerna bootstrap",
@@ -41,7 +41,7 @@
     "trailingComma": "all"
   },
   "lint-staged": {
-    "packages/**/*.{ts,tsx,md,json}": [
+    "packages/**/*.{ts,tsx,js,jsx,md,json}": [
       "eslint --fix",
       "prettier --write"
     ]
