chore: edit script format

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "turbo run test",
     "lint": "lint-staged",
     "prepublishOnly": "yarn build",
-    "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md}\"",
+    "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md,json}\"",
     "version-packages": "lerna version --conventional-commits --force-git-tag --create-release github --yes",
     "publish:pkgs": "lerna publish from-git --no-verify-access --yes",
     "postinstall": "husky install && lerna bootstrap",
