--- a/package.json
+++ b/package.json
@@ -46,36 +46,32 @@
       "prettier --write"
     ]
   },
+
   "dependencies": {
-    "@nestjs/axios": "0.0.7",
-    "@nestjs/common": "^8.2.6",
-    "@nestjs/config": "^1.1.6",
-    "@nestjs/core": "^8.2.6",
-    "@nestjs/platform-express": "^8.2.6",
-    "@nestjs/swagger": "^5.2.0",
-    "@nestjs/terminus": "^8.0.4",
-    "axios": "^0.26.0",
-    "axios-retry": "^3.2.4",
+    "@nestjs/axios": "^0.0.7",
+    "@nestjs/common": "^8.4.3",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.3",
+    "@nestjs/platform-express": "^8.4.3",
+    "@nestjs/swagger": "^5.2.1",
+    "axios": "^0.26.1",
     "lodash": "^4.17.21",
-    "pino": "^7.6.3",
-    "pino-multi-stream": "^6.0.0",
-    "pino-pretty": "^7.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "shx": "^0.3.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.10",
+    "@babel/core": "^7.17.8",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
+    "@babel/plugin-proposal-decorators": "^7.17.8",
+    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@nestjs/cli": "^8.2.0",
-    "@nestjs/schematics": "^8.0.4",
-    "@nestjs/testing": "^8.2.5",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@nestjs/cli": "^8.2.4",
+    "@nestjs/schematics": "^8.0.9",
+    "@nestjs/testing": "^8.4.3",
     "@pika/cli": "^0.2.0",
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.2",
@@ -83,32 +79,31 @@
     "@pika/plugin-standard-pkg": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.21",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.1.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^4.0.0",
-    "lint-staged": "^12.2.2",
+    "lint-staged": "^12.3.7",
     "plop": "^3.0.5",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.2",
     "supertest": "^6.2.2",
-    "ts-jest": "^27.1.2",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
+    "testcontainers": "^8.4.0",
+    "ts-jest": "^27.1.4",
+    "ts-loader": "^9.2.8",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1",
     "turbo": "latest",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.3"
   }
 }
-
-
