--- a/packages/archetype/package.json
+++ b/packages/archetype/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tresdoce-nestjs-toolkit/archetype",
-  "version": "0.0.0",
+  "version": "0.1.0-beta.0",
   "description": "Tresdoce NestJS Toolkit - archetype",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
