--- a/.github/workflows/feat.yml
+++ b/.github/workflows/feat.yml
@@ -2,9 +2,14 @@ name: "CI/CD Develop"
 
 on:
   push:
-    branches: [ "feat/*" ]
+    branches: [ develop ]
   pull_request:
-    branches: [ "feat/*" ]
+    branches: [ develop ]
+
+#env:
+#  DOCKER_HOST: tcp://docker:2375
+#  DOCKER_DRIVER: overlay2
+#  DOCKER_TLS_CERTDIR: ""
 
 jobs:
   setup:
@@ -50,3 +55,13 @@ jobs:
         env:
           NODE_ENV: 'test'
 
+      - name: "📊 Upload coverage report to Codecov"
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: "📊 SonarCloud Scan"
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
