--- a/package.json
+++ b/package.json
@@ -51,15 +51,21 @@
     "@nestjs/common": "^8.2.6",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.2.6",
+    "@nestjs/typeorm": "^8.0.3",
     "@nestjs/platform-express": "^8.2.6",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/terminus": "^8.0.4",
     "axios": "^0.26.0",
     "axios-retry": "^3.2.4",
     "lodash": "^4.17.21",
+    "mongodb": "^3.6.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "pg": "^8.5.1",
     "pino": "^7.6.3",
     "pino-multi-stream": "^6.0.0",
     "pino-pretty": "^7.3.0",
+    "typeorm": "^0.2.45",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "shx": "^0.3.4"
@@ -100,8 +106,8 @@
     "plop": "^3.0.5",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.3.2",
     "supertest": "^6.2.2",
+    "testcontainers": "^8.7.2",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
