chore(workflow): edit workflows

--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -1,10 +1,10 @@
-name: "CI/CD Develop"
+name: "Branches"
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ "feat/*", "fix/*", "refactor/*" ]
   pull_request:
-    branches: [ develop ]
+    branches: [ "feat/*", "fix/*", "refactor/*" ]
 
 #env:
 #  DOCKER_HOST: tcp://docker:2375
