--- a/packages/health/package.json
+++ b/packages/health/package.json
@@ -26,7 +26,7 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "prebuild": "shx rm -rf pkg",
+    "prebuild": "shx rm -rf ../../dist/health",
     "build": "pika build --out ../../dist/health",
     "test": "jest --runInBand --detectOpenHandles --coverage"
   },
