--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -21,5 +21,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "strict": false
-  }
+  },
+  "include": ["**/*"],
+  "exclude": ["."]
 }
