--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -43,12 +43,10 @@ jobs:
         run: yarn lint
 
       - name: "🔨 Build"
-        run: yarn build && node sonar-args.js
+        run: yarn build --force && node sonar-args.js
 
       - name: "👨‍💻 Run Test"
-        run: |
-          yarn test --force
-          ls -R ./packages
+        run: yarn test --force
         env:
           NODE_ENV: 'test'
 
