--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -51,7 +51,7 @@ jobs:
         run: yarn build && node sonar-args.js
 
       - name: "👨‍💻 Run Test"
-        run: yarn test --force
+        run: yarn test
         env:
           NODE_ENV: 'test'
 
