--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,10 +1,8 @@
-name: "CI/CD"
+name: "Quality"
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  schedule:
+    - cron: '0 8 * * *'
 
 jobs:
   setup:
