--- a/packages/archetype/package.json
+++ b/packages/archetype/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tresdoce-nestjs-toolkit/archetype",
   "version": "0.1.0-beta.1",
-  "description": "Tresdoce NestJS Toolkit - archetype",
+  "description": "Tresdoce NestJS Toolkit - Módulo informativo de la app",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
     "email": "mdelgado@tresdoce.com.ar",
