--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tresdoce-nestjs-toolkit/commons",
   "version": "0.1.0-beta.1",
-  "description": "Tresdoce NestJS Toolkit - commons",
+  "description": "Tresdoce NestJS Toolkit - Centralización de configuraciones",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
     "email": "mdelgado@tresdoce.com.ar",
