--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tresdoce-nestjs-toolkit/core",
   "version": "0.1.0-beta.1",
-  "description": "Tresdoce NestJS Toolkit - core",
+  "description": "Tresdoce NestJS Toolkit - Funcionalidades a nivel core",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
     "email": "mdelgado@tresdoce.com.ar",
