--- a/packages/filters/package.json
+++ b/packages/filters/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@tresdoce-nestjs-toolkit/test-utils",
-  "version": "0.1.0-beta.0",
-  "description": "Tresdoce NestJS Toolkit - Utilities para testing",
+  "name": "@tresdoce-nestjs-toolkit/filters",
+  "version": "0.0.0",
+  "description": "Tresdoce NestJS Toolkit - Librería para filtrar y formatear las excepciones",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
     "email": "mdelgado@tresdoce.com.ar",
@@ -13,7 +13,7 @@
   },
   "keywords": [
     "nestjs",
-    "test-utils"
+    "filters"
   ],
   "repository": {
     "type": "git",
@@ -26,13 +26,13 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "prebuild": "shx rm -rf ../../dist/test-utils",
-    "build": "pika build --out ../../dist/test-utils",
+    "prebuild": "shx rm -rf ../../dist/filters",
+    "build": "pika build --out ../../dist/filters",
     "test": "jest --runInBand --detectOpenHandles --coverage"
   },
   "publishConfig": {
     "access": "public",
-    "directory": "../../dist/test-utils"
+    "directory": "../../dist/filters"
   },
   "peerDependencies": {
     "@nestjs/common": "^8.2.0",
@@ -55,7 +55,7 @@
   "@pika/pack": {
     "pipeline": [
       [
-        "@pika/plugin-standard-pkg",
+        "@pika/plugin-ts-standard-pkg",
         {
           "exclude": [
             "**/__test__/*"
