--- a/packages/health/package.json
+++ b/packages/health/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tresdoce-nestjs-toolkit/health",
   "version": "0.1.0-beta.1",
-  "description": "Tresdoce NestJS Toolkit - health",
+  "description": "Tresdoce NestJS Toolkit - Módulo health checks liveness y readiness",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
     "email": "mdelgado@tresdoce.com.ar",
