--- a/packages/typeorm/package.json
+++ b/packages/typeorm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@tresdoce-nestjs-toolkit/typeorm",
   "version": "0.1.0-beta.0",
-  "description": "Tresdoce NestJS Toolkit - typeorm",
+  "description": "Tresdoce NestJS Toolkit - Módulo de ORM para base de datos",
   "author": {
     "name": "Maximiliano \"Mex\" Delgado",
     "email": "mdelgado@tresdoce.com.ar",
