--- a/packages/filters/package.json
+++ b/packages/filters/package.json
@@ -35,6 +35,7 @@
     "directory": "../../dist/filters"
   },
   "peerDependencies": {
+    "@nestjs/class-validator": "^0.13.3",
     "@nestjs/common": "^8.2.0",
     "@nestjs/core": "^8.2.0",
     "@nestjs/platform-express": "^8.2.0",
