feat(redis): add redis module

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,7 @@
     "test": {
       "outputs": ["coverage/**"],
       "dependsOn": [],
-      "cache": false
+      "cache": true
     },
     "lint": {
       "outputs": []
