--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "axios": "^0.26.0",
     "axios-retry": "^3.2.4",
+    "ioredis": "^5.0.6",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.0",
     "mysql": "^2.18.1",
@@ -69,7 +70,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "shx": "^0.3.4",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.10",
@@ -90,9 +92,11 @@
     "@pika/plugin-standard-pkg": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.21",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
