chore(redis): add service to redis

--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "@nestjs/typeorm": "^8.0.3",
     "axios": "^0.26.0",
     "axios-retry": "^3.2.4",
-    "ioredis": "^5.0.6",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.0",
     "mysql": "^2.18.1",
@@ -67,6 +66,7 @@
     "pino": "^7.6.3",
     "pino-multi-stream": "^6.0.0",
     "pino-pretty": "^7.3.0",
+    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "shx": "^0.3.4",
@@ -92,7 +92,6 @@
     "@pika/plugin-standard-pkg": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/express": "^4.17.13",
-    "@types/ioredis": "^4.28.10",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.21",
     "@types/supertest": "^2.0.11",
