--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "shx": "^0.3.4",
+    "testcontainers": "^8.10.0",
     "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
   },
