--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,7 +48,7 @@ jobs:
       - name: "📦 Install Dependencies"
         run: yarn install
 
-      - name: "🔦 Lint"
+      - name: "💅 Lint"
         run: yarn lint
 
       - name: "🔨 Build"
