--- a/package.json
+++ b/package.json
@@ -92,9 +92,14 @@
     "@pika/plugin-build-types": "^0.9.2",
     "@pika/plugin-standard-pkg": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
+    "@types/glob": "^7.2.0",
+    "@types/inline-css": "^3.0.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.21",
+    "@types/nodemailer": "^6.4.4",
+    "@types/pug": "^2.0.6",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
@@ -108,6 +113,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^4.0.0",
     "lint-staged": "^12.2.2",
+    "nodemailer-mock": "^1.5.12",
     "plop": "^3.0.5",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
