--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -14,12 +14,15 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ 12, 14, 16 ]
     name: "Setup"
     steps:
-      - name: "⚙ Set up Node.js"
+      - name: "⚙ Set up Node.js ${{ matrix.node }}"
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: ${{ matrix.node }}
 
       - name: "✅ Checkout repository"
         uses: actions/checkout@v2
