--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -29,10 +29,19 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: [ 12, 14, 16 ]
     needs: setup
     name: "Build"
     steps:
-      - uses: actions/checkout@v2
+      - name: "⚙ Set up Node.js ${{ matrix.node }}"
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: "✅ Checkout repository"
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
