--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ 12, 14, 16 ]
+        node: [ 14, 16 ]
     name: "Setup"
     steps:
-      - name: "⚙ Set up Node.js ${{ matrix.node }}"
+      - name: "⚙ Set up Node.js v${{ matrix.node }}"
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
@@ -31,11 +31,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [ 12, 14, 16 ]
+        node: [ 14, 16 ]
     needs: setup
     name: "Build"
     steps:
-      - name: "⚙ Set up Node.js ${{ matrix.node }}"
+      - name: "⚙ Set up Node.js v${{ matrix.node }}"
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
