--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": "./src",
     "module": "esnext",
     "target": "es2020",
+    "types": ["node", "jest"],
     "lib": ["es5", "es6", "es7", "es2017", "es2020", "esnext", "dom"],
     "sourceMap": true,
     "allowJs": true,
