--- a/packages/typeorm/package.json
+++ b/packages/typeorm/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "prebuild": "shx rm -rf ../../dist/typeorm",
     "build": "pika build --out ../../dist/typeorm",
-    "test": "jest --runInBand --detectOpenHandles --coverage"
+    "test": "jest --runInBand --detectOpenHandles --coverage --forceExit"
   },
   "publishConfig": {
     "access": "public",
