chore: edit tsconfig outdir

--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "../../dist",
+    "outDir": "./dist",
     "baseUrl": "./src",
     "module": "esnext",
     "target": "es2020",
