--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -1,10 +1,15 @@
-name: "CI/CD Develop"
+name: "Branches"
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ "feat/*", "fix/*", "refactor/*", "chore/*", "docs/*", "test/*", "build/*", "perf/*", "style/*", "revert/*" ]
   pull_request:
-    branches: [ develop ]
+    branches: [ "feat/*", "fix/*", "refactor/*", "chore/*", "docs/*", "test/*", "build/*", "perf/*", "style/*", "revert/*" ]
+
+#env:
+#  DOCKER_HOST: tcp://docker:2375
+#  DOCKER_DRIVER: overlay2
+#  DOCKER_TLS_CERTDIR: ""
 
 jobs:
   setup:
@@ -81,3 +86,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
