--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "test": "turbo run test",
     "lint": "lint-staged",
     "prepublishOnly": "yarn build",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md,json}\"",
     "version-packages": "lerna version --conventional-commits --force-git-tag --create-release github --yes",
     "publish:pkgs": "lerna publish from-git --no-verify-access --yes",
     "postinstall": "husky install && lerna bootstrap",
+    "bs": "lerna bootstrap",
     "plop": "plop"
   },
   "workspaces": [
@@ -41,7 +42,7 @@
     "trailingComma": "all"
   },
   "lint-staged": {
-    "packages/**/*.{ts,tsx,md,json}": [
+    "packages/**/*.{ts,tsx,js,jsx,md,json}": [
       "eslint --fix",
       "prettier --write"
     ]
@@ -100,7 +101,6 @@
     "plop": "^3.0.5",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.3.2",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
@@ -110,5 +110,3 @@
     "typescript": "^4.5.5"
   }
 }
-
-
