--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
     },
     "test": {
       "outputs": ["coverage/**"],
-      "dependsOn": []
+      "dependsOn": [],
+      "cache": true
     },
     "lint": {
       "outputs": []
