feat(paas): add new library

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@tresdoce-nestjs-toolkit/config",
   "private": true,
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\""
+  }
 }
