--- a/packages/tresdoce-types/package.json
+++ b/packages/tresdoce-types/package.json
@@ -7,5 +7,8 @@
   "dependencies": {
     "jest-extended": "^1.2.0"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\""
+  },
   "private": true
 }
