--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nestjs/common": "^8.2.6",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.2.6",
+    "@nestjs/microservices": "^8.2.6",
     "@nestjs/platform-express": "^8.2.6",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/terminus": "^8.0.4",
@@ -93,6 +94,7 @@
     "@pika/plugin-build-types": "^0.9.2",
     "@pika/plugin-standard-pkg": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
+    "@types/camunda-external-task-client-js": "^1.3.3",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
