--- a/packages/camunda/package.json
+++ b/packages/camunda/package.json
@@ -44,11 +44,13 @@
     "rxjs": "^7.5.5"
   },
   "dependencies": {
+    "@nestjs/microservices": "^8.2.6",
     "camunda-external-task-client-js": "^2.2.0"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.2.0",
-    "@types/tresdoce-nestjs-toolkit": "^0.1.0"
+    "@types/tresdoce-nestjs-toolkit": "^0.1.0",
+    "@types/camunda-external-task-client-js": "^1.3.3"
   },
   "prettier": {
     "semi": true,
