--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "test": "turbo run test --concurrency=1",
+    "test": "turbo run test",
     "lint": "lint-staged",
     "prepublishOnly": "yarn build",
     "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md,json}\"",
@@ -86,6 +86,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
+    "@elastic/elasticsearch-mock": "^2.0.0",
     "@nestjs/cli": "^8.2.0",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.2.5",
