--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/camunda-external-task-client-js": "^1.3.3",
     "@types/ejs": "^3.1.1",
+    "@types/elasticsearch": "^5.0.40",
     "@types/express": "^4.17.13",
     "@types/glob": "^7.2.0",
     "@types/inline-css": "^3.0.1",
