--- a/lerna.json
+++ b/lerna.json
@@ -7,6 +7,7 @@
     "version": {
       "conventionalCommits": true,
       "allowBranch": ["master"],
+      "ignoreChanges": ["**/__tests__/**", "**/*.md"],
       "changelogPreset": {
         "name": "conventionalcommits",
         "header": "<div align=\"center\"><h1>\uD83D\uDCDD Changelog</h1><p>All changes of this package will be documented in this file.</p></div>\n\n---\n",
@@ -29,6 +30,7 @@
     "publish": {
       "conventionalCommits": true,
       "allowBranch": ["master"],
+      "ignoreChanges": ["**/__tests__/**", "**/*.md"],
       "includeMergedTags": true,
       "message": "ci(release): publish packages"
     }
