--- a/packages/paas/package.json
+++ b/packages/paas/package.json
@@ -27,9 +27,10 @@
   "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "prebuild": "shx rm -rf ../../dist/paas",
+    "prebuild": "rimraf ../../dist/paas",
     "build": "pika build --out ../../dist/paas",
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "clean": "rimraf .turbo coverage node_modules test-report.xml"
   },
   "publishConfig": {
     "access": "public",
