--- a/packages/tresdoce-types/package.json
+++ b/packages/tresdoce-types/package.json
@@ -8,7 +8,8 @@
     "jest-extended": "^1.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "clean": "rimraf .turbo coverage node_modules test-report.xml"
   },
   "private": true
 }
