--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,9 @@
     "format": {
       "outputs": []
     },
+    "clean": {
+      "outputs": []
+    },
     "dev": {
       "cache": false
     }
