chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "scripts": {
     "prebuild": "rimraf ./dist",
-    "build": "turbo run build",
+    "build": "turbo run build --concurrency=1",
     "test": "turbo run test --concurrency=1",
     "clean": "turbo run clean",
     "lint": "lint-staged",
@@ -51,48 +51,48 @@
     ]
   },
   "dependencies": {
-    "@nestjs/axios": "0.0.7",
+    "@nestjs/axios": "^1.0.1",
     "@nestjs/class-validator": "^0.13.3",
-    "@nestjs/common": "^8.2.6",
-    "@nestjs/config": "^1.1.6",
-    "@nestjs/core": "^8.2.6",
-    "@nestjs/microservices": "^8.2.6",
-    "@nestjs/platform-express": "^8.2.6",
-    "@nestjs/swagger": "^5.2.0",
-    "@nestjs/terminus": "^8.0.4",
-    "@nestjs/typeorm": "^8.0.3",
-    "axios": "^0.26.0",
-    "axios-retry": "^3.2.4",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/microservices": "^9.2.1",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/swagger": "^6.1.4",
+    "@nestjs/terminus": "^9.1.4",
+    "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.2.3",
+    "axios-retry": "^3.4.0",
     "camunda-external-task-client-js": "^2.2.0",
     "lodash": "^4.17.21",
-    "mongodb": "^3.6.0",
+    "mongodb": "^4.13.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
+    "mysql2": "^3.0.1",
     "pg": "^8.5.1",
-    "pino": "^7.6.3",
+    "pino": "^8.8.0",
     "pino-multi-stream": "^6.0.0",
-    "pino-pretty": "^7.3.0",
+    "pino-pretty": "^9.1.1",
     "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "shx": "^0.3.4",
-    "testcontainers": "^8.10.0",
+    "testcontainers": "^9.1.1",
     "typeorm": "^0.3.6",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.10",
+    "@babel/core": "^7.20.12",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/plugin-proposal-decorators": "^7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@babel/plugin-proposal-decorators": "^7.20.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
     "@babel/preset-typescript": "^7.16.7",
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@elastic/elasticsearch-mock": "^2.0.0",
-    "@nestjs/cli": "^8.2.0",
-    "@nestjs/schematics": "^8.0.4",
-    "@nestjs/testing": "^8.2.5",
+    "@nestjs/cli": "^9.1.8",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.2.1",
     "@pika/cli": "^0.2.0",
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.2",
@@ -103,37 +103,37 @@
     "@types/ejs": "^3.1.1",
     "@types/elasticsearch": "^5.0.40",
     "@types/express": "^4.17.13",
-    "@types/glob": "^7.2.0",
+    "@types/glob": "^8.0.1",
     "@types/inline-css": "^3.0.1",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^18.11.9",
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.4",
     "@types/pug": "^2.0.6",
     "@types/supertest": "^2.0.11",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.1.0",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.4.7",
-    "jest-extended": "^2.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.3.1",
+    "jest-extended": "^3.2.3",
     "jest-mock-extended": "^3.0.1",
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^4.0.0",
-    "lint-staged": "^12.2.2",
+    "lint-staged": "^13.1.0",
     "nodemailer-mock": "^1.5.12",
     "plop": "^3.0.5",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
+    "prettier": "^2.8.3",
+    "rimraf": "^4.1.1",
     "supertest": "^6.2.2",
-    "testcontainers": "^8.10.0",
-    "ts-jest": "^27.1.2",
+    "testcontainers": "^9.1.1",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.12.0",
-    "turbo": "latest",
+    "tsconfig-paths": "^4.1.2",
+    "turbo": "^1.7.0",
     "typescript": "^4.5.5"
   }
 }
