--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -20,6 +20,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-    "strict": false
+    "strict": false,
+    "skipLibCheck": true
   }
 }
