--- a/packages/filters/tsconfig.json
+++ b/packages/filters/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@tresdoce-nestjs-toolkit/config",
   "compilerOptions": {
     "rootDir": "./src",
-    "types": ["tresdoce-nestjs-toolkit"]
+    "types": ["tresdoce-nestjs-toolkit", "jest"]
   },
   "include": ["src/**/*"],
   "exclude": [
