--- a/packages/health/package.json
+++ b/packages/health/package.json
@@ -36,23 +36,23 @@
     "directory": "../../dist/health"
   },
   "peerDependencies": {
-    "@nestjs/axios": "0.0.7",
-    "@nestjs/common": "^8.2.0",
-    "@nestjs/core": "^8.2.0",
-    "@nestjs/platform-express": "^8.2.0",
-    "@nestjs/swagger": "^5.2.0",
-    "@nestjs/terminus": "^8.0.4",
-    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/axios": "^1.0.1",
+    "@nestjs/common": "^9.2.1",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/swagger": "^6.1.4",
+    "@nestjs/terminus": "^9.1.4",
+    "@nestjs/typeorm": "^9.0.1",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "typeorm": "^0.3.6"
   },
   "dependencies": {
-    "@nestjs/axios": "0.0.7",
-    "@nestjs/swagger": "^5.2.0",
-    "@nestjs/terminus": "^8.0.4",
-    "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/axios": "^1.0.1",
+    "@nestjs/swagger": "^6.1.4",
+    "@nestjs/terminus": "^9.1.4",
+    "@nestjs/typeorm": "^9.0.1",
     "lodash": "^4.17.21",
     "typeorm": "^0.3.6"
   },
