--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@types/glob": "^8.0.1",
     "@types/inline-css": "^3.0.1",
     "@types/jest": "^29.2.6",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.4",
     "@types/pug": "^2.0.6",
@@ -123,6 +124,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^4.0.0",
     "lint-staged": "^13.1.0",
+    "mocha": "^10.2.0",
     "nodemailer-mock": "^1.5.12",
     "plop": "^3.0.5",
     "prettier": "^2.8.3",
