--- a/packages/redis/tsconfig.json
+++ b/packages/redis/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "@tresdoce-nestjs-toolkit/config",
   "compilerOptions": {
-    "rootDir": "./src",
-    "types": ["tresdoce-nestjs-toolkit", "jest"]
+    "rootDir": "./src"
   },
   "include": ["src/**/*"],
   "exclude": [
