--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -22,6 +22,7 @@
     "esModuleInterop": true,
     "strict": false,
     "skipLibCheck": true,
+    "ignoreDeprecations": "5.0",
     "types": ["tresdoce-nestjs-toolkit", "jest", "node"]
   }
 }
